pkgs/dartcv_core/src/core.h

// CvStatus *noArray(InputOutputArray *rval);

// internal use
// VecPoint2f vecPointToVecPoint2f(VecPoint src);

void CvStatus_Close(CvStatus *self);
void Mat_Close(MatPtr m);
void Mat_CloseVoid(void *m);
int Mat_Cols(Mat m);
int Mat_Channels(Mat m);
int Mat_Dims(Mat m);
uchar *Mat_Data(Mat m);
// CvStatus *Mat_DataPtr(Mat m, uchar **data, int *length);

CvStatus *Mat_AdjustROI(Mat m, int dtop, int dbottom, int dleft, int dright, Mat *rval);
CvStatus *Mat_Clone(Mat m, Mat *rval);
CvStatus *Mat_Col(Mat m, int x, Mat *rval);
CvStatus *Mat_CopyTo(Mat m, Mat dst);
CvStatus *Mat_CopyToWithMask(Mat m, Mat dst, Mat mask);
CvStatus *Mat_ConvertTo(Mat m, Mat dst, int type);
CvStatus *Mat_ConvertToWithParams(Mat m, Mat dst, int type, float alpha, float beta);
CvStatus *Mat_ConvertFp16(Mat m, Mat *rval);
CvStatus *Eye(int rows, int cols, int type, Mat *rval);
CvStatus *Mat_AddMat(Mat m, Mat val);
CvStatus *Mat_DivideMat(Mat m, Mat val);
CvStatus *Mat_AddUChar(Mat m, uint8_t val);
CvStatus *Mat_DivideUChar(Mat m, uint8_t val);
CvStatus *Mat_AddSChar(Mat m, int8_t val);
CvStatus *Mat_DivideSChar(Mat m, int8_t val);
CvStatus *Mat_AddI16(Mat m, int16_t val);
CvStatus *Mat_DivideI16(Mat m, int16_t val);
CvStatus *Mat_AddU16(Mat m, uint16_t val);
CvStatus *Mat_DivideU16(Mat m, uint16_t val);
CvStatus *Mat_AddI32(Mat m, int32_t val);
CvStatus *Mat_DivideI32(Mat m, int32_t val);
CvStatus *Mat_AddFloat(Mat m, float_t val);
CvStatus *Mat_DivideFloat(Mat m, float_t val);
CvStatus *Mat_AddF64(Mat m, double_t val);
CvStatus *Mat_DivideF64(Mat m, double_t val);
CvStatus *Mat_AbsDiff(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_Add(Mat src1, Mat src2, Mat dst, Mat mask, int dtype);
CvStatus *
Mat_AddWeighted(Mat src1, double alpha, Mat src2, double beta, double gamma, Mat dst, int dtype);
CvStatus *Mat_BitwiseAnd(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_BitwiseAndWithMask(Mat src1, Mat src2, Mat dst, Mat mask);
CvStatus *Mat_BitwiseNot(Mat src1, Mat dst);
CvStatus *Mat_BitwiseNotWithMask(Mat src1, Mat dst, Mat mask);
CvStatus *Mat_BitwiseOr(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_BitwiseOrWithMask(Mat src1, Mat src2, Mat dst, Mat mask);
CvStatus *Mat_BitwiseXor(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_BitwiseXorWithMask(Mat src1, Mat src2, Mat dst, Mat mask);
CvStatus *Mat_Compare(Mat src1, Mat src2, Mat dst, int ct);
CvStatus *Mat_BatchDistance(
    Mat src1,
    Mat src2,
    Mat dist,
    int dtype,
    Mat nidx,
    int normType,
    int K,
    Mat mask,
    int update,
    bool crosscheck
);
CvStatus *Mat_BorderInterpolate(int p, int len, int borderType, int *rval);
CvStatus *Mat_CalcCovarMatrix(Mat samples, Mat covar, Mat mean, int flags, int ctype);
CvStatus *Mat_CartToPolar(Mat x, Mat y, Mat magnitude, Mat angle, bool angleInDegrees);
CvStatus *Mat_CheckRange(Mat m, bool quiet, Point *pos, double minVal, double maxVal, bool *rval);
CvStatus *Mat_CompleteSymm(Mat m, bool lowerToUpper);
CvStatus *Mat_ConvertScaleAbs(Mat src, Mat dst, double alpha, double beta);
CvStatus *Mat_CopyMakeBorder(
    Mat src, Mat dst, int top, int bottom, int left, int right, int borderType, Scalar value
);
int  Mat_CountNonZero(Mat src);
CvStatus *Mat_DCT(Mat src, Mat dst, int flags);
CvStatus *Mat_Determinant(Mat m, double *rval);
CvStatus *Mat_DFT(Mat src, Mat dst, int flags, int nonzeroRows);
CvStatus *Mat_Divide(Mat src1, Mat src2, Mat dst, double scale, int dtype);
CvStatus *LUT(Mat src, Mat lut, Mat dst);
CvStatus *KMeans(
    Mat data,
    int k,
    Mat bestLabels,
    TermCriteria criteria,
    int attempts,
    int flags,
    Mat centers,
    double *rval
);
CvStatus *KMeansPoints(
    VecPoint2f pts,
    int k,
    Mat bestLabels,
    TermCriteria criteria,
    int attempts,
    int flags,
    Mat centers,
    double *rval
);
CvStatus *GetCVTickCount(int64_t *rval);
CvStatus *GetTickFrequency(double *rval);
CvStatus *GetNumThreads(int *rval);