lib/src/g/core.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:opencv_dart/opencv_dart.dart')
library;

import 'dart:ffi' as ffi;
import 'package:opencv_dart/src/g/types.g.dart' as imp1;
import '' as self;

@ffi.Native<ffi.Void Function(ffi.Pointer<CvStatus>)>()
external void CvStatus_Close(
  ffi.Pointer<CvStatus> self,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Eye(
  int rows,
  int cols,
  int type,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Int64>)>()
external ffi.Pointer<CvStatus> GetCVTickCount(
  ffi.Pointer<ffi.Int64> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> GetNumThreads(
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> GetTickFrequency(
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, Mat, TermCriteria, ffi.Int,
        ffi.Int, Mat, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> KMeans(
  Mat data,
  int k,
  Mat bestLabels,
  TermCriteria criteria,
  int attempts,
  int flags,
  Mat centers,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint2f, ffi.Int, Mat, TermCriteria,
        ffi.Int, ffi.Int, Mat, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> KMeansPoints(
  VecPoint2f pts,
  int k,
  Mat bestLabels,
  TermCriteria criteria,
  int attempts,
  int flags,
  Mat centers,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> LUT(
  Mat src,
  Mat lut,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_AbsDiff(
  Mat src1,
  Mat src2,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Add(
  Mat src1,
  Mat src2,
  Mat dst,
  Mat mask,
  int dtype,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, double_t)>()
external ffi.Pointer<CvStatus> Mat_AddF64(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, float_t)>()
external ffi.Pointer<CvStatus> Mat_AddFloat(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>()
external ffi.Pointer<CvStatus> Mat_AddI16(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>()
external ffi.Pointer<CvStatus> Mat_AddI32(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_AddMat(
  Mat m,
  Mat val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>()
external ffi.Pointer<CvStatus> Mat_AddSChar(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>()
external ffi.Pointer<CvStatus> Mat_AddU16(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>()
external ffi.Pointer<CvStatus> Mat_AddUChar(
  Mat m,
  int val,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Double, Mat, ffi.Double, ffi.Double, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_AddWeighted(
  Mat src1,
  double alpha,
  Mat src2,
  double beta,
  double gamma,
  Mat dst,
  int dtype,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_AdjustROI(
  Mat m,
  int dtop,
  int dbottom,
  int dleft,
  int dright,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Int, Mat, ffi.Int,
        ffi.Int, Mat, ffi.Int, ffi.Bool)>()
external ffi.Pointer<CvStatus> Mat_BatchDistance(
  Mat src1,
  Mat src2,
  Mat dist,
  int dtype,
  Mat nidx,
  int normType,
  int K,
  Mat mask,
  int update,
  bool crosscheck,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_BitwiseAnd(
  Mat src1,
  Mat src2,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_BitwiseAndWithMask(
  Mat src1,
  Mat src2,
  Mat dst,
  Mat mask,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_BitwiseNot(
  Mat src1,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_BitwiseNotWithMask(
  Mat src1,
  Mat dst,
  Mat mask,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_BitwiseOr(
  Mat src1,
  Mat src2,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_BitwiseOrWithMask(
  Mat src1,
  Mat src2,
  Mat dst,
  Mat mask,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_BitwiseXor(
  Mat src1,
  Mat src2,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_BitwiseXorWithMask(
  Mat src1,
  Mat src2,
  Mat dst,
  Mat mask,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> Mat_BorderInterpolate(
  int p,
  int len,
  int borderType,
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Int, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_CalcCovarMatrix(
  Mat samples,
  Mat covar,
  Mat mean,
  int flags,
  int ctype,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Bool)>()
external ffi.Pointer<CvStatus> Mat_CartToPolar(
  Mat x,
  Mat y,
  Mat magnitude,
  Mat angle,
  bool angleInDegrees,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_Channels(
  Mat m,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Bool, ffi.Pointer<Point>,
        ffi.Double, ffi.Double, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> Mat_CheckRange(
  Mat m,
  bool quiet,
  ffi.Pointer<Point> pos,
  double minVal,
  double maxVal,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_Clone(
  Mat m,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_Clone_Async(
  Mat self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(imp1.MatPtr)>()
external void Mat_Close(
  imp1.MatPtr m,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void Mat_CloseVoid(
  ffi.Pointer<ffi.Void> m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_Col(
  Mat m,
  int x,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_Cols(
  Mat m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Compare(
  Mat src1,
  Mat src2,
  Mat dst,
  int ct,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Bool)>()
external ffi.Pointer<CvStatus> Mat_CompleteSymm(
  Mat m,
  bool lowerToUpper,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_ConvertFp16(
  Mat m,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Double)>()
external ffi.Pointer<CvStatus> Mat_ConvertScaleAbs(
  Mat src,
  Mat dst,
  double alpha,
  double beta,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_ConvertTo(
  Mat m,
  Mat dst,
  int type,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Float, ffi.Float)>()
external ffi.Pointer<CvStatus> Mat_ConvertToWithParams(
  Mat m,
  Mat dst,
  int type,
  double alpha,
  double beta,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Float, ffi.Float, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_ConvertToWithParams_Async(
  Mat self,
  int type,
  double alpha,
  double beta,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_ConvertTo_Async(
  Mat self,
  int type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int, Scalar)>()
external ffi.Pointer<CvStatus> Mat_CopyMakeBorder(
  Mat src,
  Mat dst,
  int top,
  int bottom,
  int left,
  int right,
  int borderType,
  Scalar value,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_CopyTo(
  Mat m,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_CopyToWithMask(
  Mat m,
  Mat dst,
  Mat mask,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> Mat_CopyToWithMask_Async(
  Mat self,
  Mat dst,
  Mat mask,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> Mat_CopyTo_Async(
  Mat self,
  Mat dst,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> Mat_CountNonZero(
  Mat src,
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_DCT(
  Mat src,
  Mat dst,
  int flags,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_DFT(
  Mat src,
  Mat dst,
  int flags,
  int nonzeroRows,
);

@ffi.Native<ffi.Pointer<imp1.uchar> Function(Mat)>(isLeaf: true)
external ffi.Pointer<imp1.uchar> Mat_Data(
  Mat m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> Mat_Determinant(
  Mat m,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_Dims(
  Mat m,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Double, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Divide(
  Mat src1,
  Mat src2,
  Mat dst,
  double scale,
  int dtype,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, double_t)>()
external ffi.Pointer<CvStatus> Mat_DivideF64(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, float_t)>()
external ffi.Pointer<CvStatus> Mat_DivideFloat(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>()
external ffi.Pointer<CvStatus> Mat_DivideI16(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>()
external ffi.Pointer<CvStatus> Mat_DivideI32(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_DivideMat(
  Mat m,
  Mat val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>()
external ffi.Pointer<CvStatus> Mat_DivideSChar(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>()
external ffi.Pointer<CvStatus> Mat_DivideU16(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>()
external ffi.Pointer<CvStatus> Mat_DivideUChar(
  Mat m,
  int val,
);
